Fix 404 prediction route

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
 <body>
 <div class="container">
     <h2>House Price Prediction</h2>
-    <form action="/predict" method="post">
+    <form action="/" method="post">
         <input type="number" name="sqft" placeholder="Square Footage" required>
         <input type="number" name="bedrooms" placeholder="No. of Bedrooms" required>
         <input type="number" name="bathrooms" placeholder="No. of Bathrooms" required>
